# create-foxglove-extension

./: .eslintrc.yaml  .gitignore  CHANGELOG.md  README.md  eslint.config.js  jest.config.js  jest.config.json  package.json  tsconfig.json
.github/: ci.yml  dependabot.yml
.github/workflows/: ci.yml  npm-publish.yml
examples/call-service-panel-example/: CHANGELOG.md  README.md  package-lock.json  package.json
examples/csv-data-loader/: .gitignore  CHANGELOG.md  README.md  config.ts  package.json  sample_data.csv
examples/custom-image-extension/: CHANGELOG.md  README.md  config.ts  package-lock.json  package.json  tsconfig.json
examples/extension-demo/: README.md  package-lock.json  package.json  tsconfig.json
examples/message-converter/: CHANGELOG.md  README.md  package-lock.json  package.json
examples/monaco-editor-example/: .eslintrc.yaml  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
examples/mp3-data-loader/: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
examples/ndjson-data-loader/: .gitignore  README.md  config.ts  package-lock.json  package.json  tsconfig.json
examples/ndjson-data-loader/rust/: Cargo.toml
examples/ndjson-data-loader/rust/src/: lib.rs
examples/panel-node-actions/: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
examples/panel-settings/: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
examples/rust-data-loader/: CHANGELOG.md  README.md  example.ndjson  package-lock.json  package.json
examples/rust-data-loader-template/: CHANGELOG.md  README.md  eslint.config.js  package-lock.json  package.json
examples/rust-data-loader/rust/: Cargo.toml
examples/rust-data-loader/rust/src/: lib.rs
examples/simple-3d-extension/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
examples/tailwind-styling/: CHANGELOG.md  README.md  config.ts  package-lock.json  package.json
examples/topic-aliasing/: .eslintrc.yaml  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
examples/topic-mapping/: CHANGELOG.md  README.md  package-lock.json  package.json
src/: build.ts  create.test.ts  create.ts  extensions.ts  index.ts  log.ts  main.ts  package.test.ts  package.ts  webpackConfigExtension.ts
template/: .eslintrc.yaml  LICENSE  README.md  config.ts  eslint.config.js  package-lock.json  package.json  tsconfig.json
tsconfig/: tsconfig.json
(+47 files in other folders)
