[package]
name = "example-foxglove-ndjson-data-loader"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
foxglove_data_loader = { git = "https://github.com/foxglove/foxglove-sdk.git", rev = "06fa9b1639071d4dbae87e77ea4fc810cff825b3" }
serde_json = "1.0"

[dependencies.foxglove]
version = "0.9.0"
default-features = false
features = [ "derive" ]
