[package]
name = "example-foxglove-ndjson-data-loader"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
foxglove_data_loader = { git = "https://github.com/foxglove/foxglove-sdk.git", rev = "a697f504d66c73ef42027c7f7d009608163835b4" }
serde_json = "1.0"

[dependencies.foxglove]
version = "0.9.0"
default-features = false
features = [ "derive" ]
